@@ -8,8 +8,9 @@ rebuildd (0.2.2) UNRELEASED; urgency=low
   * Remove send_build_logs, not used anymore, cleaning up code
   * Do not restart on upgrade
   * Print all active thread count in logs
+  * Now we handle 3 types of build failures, more clear
 
- -- Julien Danjou <acid@debian.org>  Fri, 10 Aug 2007 16:49:23 +0200
+ -- Julien Danjou <acid@debian.org>  Sat, 11 Aug 2007 02:35:22 +0200
 
 rebuildd (0.2.1) unstable; urgency=low
 
